@@ -1,3 +1,11 @@
+2010-10-22  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/Makefile.am:
+	* src/lib/dirent.h:
+	* src/lib/evil_dirent.c:
+	use our own dirent structure and implementation instead of
+	mingw one.
+
 2010-09-14  Vincent Torri  <doursse at users dot sf dot net>
 
 	* src/lib/Makefile.am:
